--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'org.parceler:parceler-api:1.0.4'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     apt 'org.parceler:parceler:1.0.4'
 }
